# neolithic-abm

./: Cargo.toml  README.md  notes.txt  plot.ipynb  plot.py  plot_gif.py
previous/: S_f_2_d_5.csv
results/: f1.csv  f16.csv  f2.csv  f4.csv  f8.csv  plot.py  results.csv
results/A/: A_f_0_d_0.csv  A_f_0_d_1.csv  A_f_0_d_2.csv  A_f_0_d_3.csv  A_f_0_d_4.csv  A_f_0_d_5.csv  A_f_0_d_6.csv  A_f_0_d_7.csv  A_f_0_d_8.csv  A_f_0_d_9.csv  A_f_1_d_0.csv  A_f_1_d_1.csv  A_f_1_d_2.csv  A_f_1_d_3.csv  A_f_1_d_4.csv  A_f_1_d_5.csv  A_f_1_d_6.csv  A_f_1_d_7.csv  A_f_1_d_8.csv  A_f_1_d_9.csv  A_f_2_d_0.csv  A_f_2_d_1.csv  A_f_2_d_2.csv  A_f_2_d_3.csv  A_f_2_d_4.csv  A_f_2_d_5.csv  A_f_2_d_6.csv  A_f_2_d_7.csv  A_f_2_d_8.csv  A_f_2_d_9.csv  A_f_3_d_0.csv  A_f_3_d_1.csv  A_f_3_d_2.csv  A_f_3_d_3.csv  A_f_3_d_4.csv  A_f_3_d_5.csv  A_f_3_d_6.csv  A_f_3_d_7.csv  A_f_3_d_8.csv  A_f_3_d_9.csv  (+40 more)
results/D/: D_f_0_d_0.csv  D_f_0_d_1.csv  D_f_0_d_2.csv  D_f_0_d_3.csv  D_f_0_d_4.csv  D_f_0_d_5.csv  D_f_0_d_6.csv  D_f_0_d_7.csv  D_f_0_d_8.csv  D_f_0_d_9.csv  D_f_1_d_0.csv  D_f_1_d_1.csv  D_f_1_d_2.csv  D_f_1_d_3.csv  D_f_1_d_4.csv  D_f_1_d_5.csv  D_f_1_d_6.csv  D_f_1_d_7.csv  D_f_1_d_8.csv  D_f_1_d_9.csv  D_f_2_d_0.csv  D_f_2_d_1.csv  D_f_2_d_2.csv  D_f_2_d_3.csv  D_f_2_d_4.csv  D_f_2_d_5.csv  D_f_2_d_6.csv  D_f_2_d_7.csv  D_f_2_d_8.csv  D_f_2_d_9.csv  D_f_3_d_0.csv  D_f_3_d_1.csv  D_f_3_d_2.csv  D_f_3_d_3.csv  D_f_3_d_4.csv  D_f_3_d_5.csv  D_f_3_d_6.csv  D_f_3_d_7.csv  D_f_3_d_8.csv  D_f_3_d_9.csv  (+40 more)
results/S/: S_f_0_d_0.csv  (+79 more)
src/: household.rs  main.rs  settlement.rs  visualiser.rs  world.rs
