[package]
name = "neo"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
csv = "1.2.2"
rand = "0.8"
rayon = "1.8.0"
image = "0.24"
clap = { version = "4.5.23", features = ["derive"] }
